fix: Footer alignment, array destructuring syntax

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -69,6 +69,7 @@
 
 .badge-icon {
   min-width: 1.5rem;
+  aspect-ratio: 1/1;
 }
 
 @media only screen and (max-width: 500px) {
