--- a/src/pages/Authentication/auth.css
+++ b/src/pages/Authentication/auth.css
@@ -1,6 +1,6 @@
 .auth-container {
   max-width: 20rem;
-  margin: 5rem auto 5rem auto;
+  margin: 5rem auto;
 }
 
 .auth-header {
